--- a/BasicCalculator/BasicCalculator/Info.plist
+++ b/BasicCalculator/BasicCalculator/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Basic Calculator</string>
+	<string>Basic Calc</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
